prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/float_overflow.diag.txt
ERROR: float constant overflow
testData/diagnostics/float_overflow.nut:1:8

println(1000000000000000000000000000000000000000.0)
        ^-----------------------------------------


